[project]
name = "youqu3"
description = "YouQu-Next"
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
]
dynamic = [
  "version",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "youqu3/__version__.py" }

