[project]
name = "youqu3"
description = "YouQu-Next"
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
    "pytest",
    "pytest-timeout",
    "pytest-rerunfailures",
    "allure-pytest",
    "funnylog",
]
dynamic = [
  "version",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "youqu3/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/youqu3",
]

