[project]
name = "youqu3"
description = "YouQu-Next"
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
    "pytest",
    "pytest-timeout",
    "pytest-rerunfailures",
    "pytest-mark-manage",
    "allure-pytest",
    "funnylog",
    "click",
    "rich",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
desktop-ui = [
    "youqu-dogtail",
    "youqu-imagecenter-rpc",
    "youqu-mousekey",
    "pdocr-rpc",
    # "wdotool",
]
webui = [
    "pytest-youqu-playwright",
]

requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }

[project.scripts]
youqu3 = "youqu3.driver.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "youqu3/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/youqu3",
]

